# zephyr_empty

./: CMakeLists.txt  prj.conf  readme.md  setup.sh
src/: .clang-format  main.c
